# filedrawers

./: .gitignore  CHANGELOG  LICENSE  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  install-sh
application/: Bootstrap.php
application/configs/: application.dist  application.ini  application.php  config.dist  config.ini  local.dist.php
application/controllers/: FavoritesController.php  FiledrawersController.php  WebservicesController.php
application/forms/: MkdirForm.php  MoveForm.php  RenameForm.php  UploadForm.php
application/layouts/scripts/: layout.phtml
application/models/: Afs.php  Cifs.php  CifsStream.php  File.php  HomeDirectory.php  Mime.php  UMForceHomeDirectory.php  UploadStatus.php  UserFavorites.php  UserFavs.php
application/modules/webapp/: VERSION
application/modules/webapp/controllers/: ErrorController.php  IndexController.php
application/modules/webapp/layouts/scripts/: layout.phtml
application/modules/webapp/views/helpers/: CreateLinkPath.php
application/modules/webapp/views/scripts/error/: error.phtml
application/modules/webapp/views/scripts/index/: list.phtml  not-supported.phtml  uploadForm.phtml
application/modules/webservices/controllers/: FDController.php  FavoritesController.php  FiledrawersControllerAbstract.php  IndexController.php  V1Controller.php
application/modules/webservices/forms/: AclForm.php  AddForm.php  CopyForm.php  DeleteForm.php  DuplicateForm.php  FavoritesAddForm.php  FavoritesDeleteForm.php  FavoritesRenameForm.php  MkdirForm.php  MoveForm.php  UploadForm.php
application/modules/webservices/forms/Favorites/: AddForm.php  DeleteForm.php  FavAddForm.php  FavDeleteForm.php  FavRenameForm.php  RenameForm.php
application/modules/webservices/views/helpers/: DisplayErrors.php  FormatBytes.php
application/modules/webservices/views/scripts/favorites/: _partial_list.phtml  list.phtml  rename.phtml  test.phtml
application/modules/webservices/views/scripts/index/: _partial_list.phtml  delete.phtml  gettoken.phtml  index.phtml  list.phtml  permissions.phtml  upload.phtml  uploadfinish.phtml  uploadstatus.phtml
application/modules/webservices/views/scripts/v1/: list.phtml  services.phtml
application/plugins/AfsMime/: Controller.php
application/plugins/CoSign/: AdapterCosign.php  Controller.php
application/services/: Ifs.php  Local.php  MainstreamStorage.php
application/views/helpers/: CreateLinkPath.php
application/views/scripts/: filemanager.phtml  filemanager_js.phtml  footer.phtml  header.phtml  webservices.phtml
application/views/scripts/favorites/: index.phtml
application/views/scripts/filedrawers/: ajaxlist.phtml  index.phtml  list.phtml
application/views/scripts/webservices/: index.phtml  list.phtml
css/: adminsupport.css  allowsupport.css  favorites.css  fileman.css  ie5specific.css  ie6specific.css  makewebspace.css  styles.css  webspace.css
docs/: HTTP_USER_AGENTS  filedrawers_schema.sql
js/: allowsupport.js  filemanage.js
libcgi/: cgi.c  cgi.h  configure
pecl/: config.m4  filedrawers.c  php_filedrawers.h
pecl/tests/: 001.phpt  002.phpt  003.phpt
php/: .cvsignore  addfavorites.php  affiliations.php  afs.php  deletefavorites.php  favorites.php  feedback.php  help.php  index_adminsupport.php  index_allowsupport.php  index_download.php  index_filemanager.php  index_html.php  index_makewebspace.php  libdrawers.php  make_makewebspace.php  makewebspace.php  mime.php  missinghomedir.php  perm_manager.php  progress.php  renamefavorites.php  scripterror.php  scriptversion.php  session.php  supportgroups.php  upload-info-server.php  view.php  viewfavorites.php  webspaces.php
public/: .htaccess  .htaccess.dist  index.php  interface.html  upload.php
public/css/: datatable.css  filedrawers.css
public/js/: browserdetect.js  filedrawers-old.js  filedrawers.js  yui.js
services/: Ifs.php  Local.php  MainstreamStorage.php
smarty/: addFavorites.tpl  adminsupport.tpl  adminsupport_noauth.tpl  allowsupport.tpl  banner.tpl  deleteFavorites.tpl  filelist.tpl  fileman.tpl  header.tpl  help.tpl  infobar.tpl  makewebspace.tpl  masthead.tpl  missinghomedir.tpl  permissions.tpl  renameFavorites.tpl  scripterror.tpl  scriptversion.tpl  sidebar.tpl  smarty.custom.php  viewFavorites.tpl  viewfile.tpl
upload/: Makefile.in  conf.c  conf.h  configure  configure.ac  tpupload.c
